Change partner load page and deprecate farm routes
